fix footer social links layout bug in safari

--- a/source/assets/stylesheets/application/components/footer.css.scss
+++ b/source/assets/stylesheets/application/components/footer.css.scss
@@ -23,6 +23,10 @@
     display: inline-block;
     margin: 0 50px;
     vertical-align: middle;
+
+    > a {
+      display: inline-block;
+    }
   }
 
   > a {
